# SpaScope

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: run_builtin_demo.py
spascope/: __init__.py  clustering.py  contact.py  datasets.py  gat_scale.py  raster.py  utils.py
