[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spascope"
version = "0.1.0"
description = "SpaScope: a Python package for multi-scale spatial structure analysis from spatial single-cell data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Libing Hong", email = "libing_h@163.com" },
  { name = "Xuanwen Bao", email = "xuanwen.bao@zju.edu.cn" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "torch>=2.0",
  "torch-geometric>=2.3",
  "rasterio>=1.3",
  "pylandstats>=3.1",
  "scikit-image>=0.20",
  "tqdm>=4.65",
  "anndata>=0.10"
]

[project.urls]
Homepage = "https://github.com/BaoSpatialLab/SpaScope"
Repository = "https://github.com/BaoSpatialLab/SpaScope"
Issues = "https://github.com/BaoSpatialLab/SpaScope/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spascope*"]

[tool.setuptools.package-data]
spascope = ["data/demo/*.h5ad"]





